# stnumber

./: CMakeLists.txt  CMakeLists.txt.backup  CMakeLists.txt~  LICENSE  README.md  model
cmake/: ConfigureCaffe.cmake  ConfigureCaffe.cmake~  ConfigureHDF5.cmake  ConfigureHDF5.cmake~  ConfigureOpenCV.cmake  ConfigureTinyxml2.cmake
data/filelists/: filelists_01.txt  filelists_02.txt
data/model/: caffe.slave7.public.log.INFO.20171101-204718.31130  onet.caffemodel  onet_50k.caffemodel  onet_deploy.prototxt  onet_dpir.caffemodel  onet_ir1.caffemodel  onet_iter_10000.caffemodel  pnet.caffemodel  pnet_deploy.prototxt  pnet_dpir.caffemodel  pnet_finetune_iter_18600.caffemodel  pnet_ir1.caffemodel  pnet_ir2.caffemodel  pnet_iter_111k.caffemodel  pnet_iter_97500.caffemodel  pnet_iter_97800.caffemodel  rnet.caffemodel  rnet_cla_iter_19700.caffemodel  rnet_deploy.prototxt  rnet_dpir.caffemodel  rnet_ir1.caffemodel  tnet.caffemodel  tnet_deploy.prototxt  tnet_iter_500k_r10c1.caffemodel  tnet_iter_500k_r2c1.caffemodel
data/model/train/: train_pnet.sh  train_rnet.sh
data/model/train/prototxt/: PNet_train.prototxt  pnet.prototxt  pnet.prototxt.backup  pnet.prototxt~  pnet_cla.prototxt~  pnet_cla_solver.prototxt  pnet_cla_solver.prototxt~  pnet_solver.prototxt
data/model/train/prototxt/onet/: onet.prototxt  onet_cla.prototxt  onet_cla_solver.prototxt  onet_solver.prototxt  rnet.prototxt.backup  rnet.prototxt~  rnet_cla_solver.prototxt  rnet_cla_solver.prototxt~  rnet_solver.prototxt~
data/model/train/prototxt/rnet/: rnet_cla.prototxt
data/samples48/: part.txt  positive.txt
include/cnnetwork/: retrieve_output.h
include/common/: filepath.h  geometry_tools.h  hdf5_ct.h  readxml_ct.h
include/detection/: detect_face.h  detect_geometry.h  generate_patch.h  hand_boundingbox.h
matlab/: data_info.mat  gen_hdf5.m  get_bbxes.m  get_bbxes.m~  get_bbxes_face.m  pnet.prototxt  pnet_iter_100000.caffemodel  positive.txt  positive_rand.txt  sample48.txt  statistic_gaussian.m  statistic_gaussian.m~  test.h5  test_hdf5.m
matlab/samples/: img_xml.xml
src/common/: filepath.cc  geometry_tools.cc  hdf5_ct.cc  readxml_ct.cc
src/detection/: detect_geometry.cc  generate_patch.cc  hand_boundingbox.cc
test/: gesture_data.cc  test.cc  test_bbx.cc  test_cnn.cc  test_hdf5.cc  test_mtcnn.cc  test_patch.cc  test_xml.cc
